pest/src/snapshots/pest__error__tests__display_custom_span_three_lines.snap
---
source: pest/src/error.rs
expression: error
---
 --> 1:2
  |
1 | ab
  | ...
3 | efgh
  |  ^^
  |
  = error: big one
